--- a/S02/02_loops.ipynb
+++ b/S02/02_loops.ipynb
@@ -314,12 +314,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0rc2"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "ead1b95f633dc9c51826328e1846203f51a198c6fb5f2884a80417ba131d4e82"
+    "hash": "691d80cfdc6b5e921a059218826630bc0cc96114a2f945c763ebc6364d164165"
    }
   }
  },
